# kCAT

./: pyproject.toml
CAT/: CAT.py  about.py  add_names.py  bins.py  check.py  contigs.py  download.py  prepare.py  shared.py  single_bin.py  summarise.py  tax.py
CAT_pack/: download.py
