[build-system]
requires = [
    "setuptools >= 61",
    "setuptools_scm[toml] >= 4",
    "setuptools_scm_git_archive",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = "CAT/_version.py"
local_scheme = "no-local-version"
[project]
name="CAT"
version="v6.0.0-a"
readme="README.md"

[project.scripts]
CAT="CAT.CAT:main"
